cards in rows and columns with proper spacing other css fixes

--- a/updated-portfolio/src/styles/about.css
+++ b/updated-portfolio/src/styles/about.css
@@ -10,8 +10,8 @@
   }
 
   .latest {
-    width: 80%;
-    height: 80%;
+    width: 65%;
+    height: 75%;
     display: block;
     margin-left: auto;
     margin-right: auto;
