--- a/updated-portfolio/src/styles/projects.css
+++ b/updated-portfolio/src/styles/projects.css
@@ -5,8 +5,15 @@
     
   }
 
-  button {
-      width: 100%;
+  #proj-links {
+      width: 45%;
+      border-radius: 5px;
+      text-decoration: none;
+      border: 1px solid #777777;
+      padding: 5px 10px;
+      color: lightseagreen;
+      background-color: #495057;
+      font-weight: 900;
   }
 
   #contForCards {
@@ -14,6 +21,6 @@
     position: relative;
     width: 300px;
     height: 350px;
-    margin-bottom: 20px;
+    margin-bottom: 120px;
   }
   
